<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordForgotFragment" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="147dp"
        android:layout_height="136dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/forgotPassword"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/passwordResetDialog"
        android:layout_width="329dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialogPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/labelForgotPassword"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="@+id/labelForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/labelForgotPassword" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordResetDialog"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/orange"
        android:text="Send"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />

    <TextView
        android:id="@+id/labelSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="Don't have an account?"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sign Up "
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/labelSignUp"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>